--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,4 +7,22 @@ One of the most unusual aspects of her history was her first book, Art Without R
 
 Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024."
 </h5>
-<%= link_to "Artwork", about_path %>
+<%= link_to about_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Artwork </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="30"
+    height="10"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button>
+<% end %>
