cards,biography,photos

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,15 +1,154 @@
 <h1>artwork</h1>
 
+<div class="card">
+<img src="" alt="Cover Photo">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">SOFT PATTERNS  cylinders and panels 1973 – 1978
+</p>
+    <p class="card__description">
+      My first Installation series, Soft Patterns panels and
+      cylinders, I began in Milan, Italy in 1973. As a reaction to
+      finding so many American consumer products the patterns were
+      my reaction to world uniformity. Long term patterns
+      constitute the future of any society.  I used the objects
+      as signs and their repetition as patterns. Over the years
+      they became more like symbols and a language to help read
+      the future. The series was exhibited in many museums
+      including Palazzo Arengario in Milan, the Utah Museum
+      of Fine Art, Nexus Foundation for today's Art in
+      Philadelphia, Fyns Kunstmuseum in Denmark, Gulbenkian
+      Museum of Modern Art in Lisbon and many others in
+      quite a few different countries.
+    </p>
+  </div>
+</div>
 
+<div class="card">
+<img src="" alt="Cover Photo">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> HIEROGLYPHICS 1982 – 1992
+
+</p>
+    <p class="card__description">
+Using simple imprints of everyday objects, stripped away everything unnecessary and reduced the image to pure form. It was the combination of signs that made them look like you could read them, as if they might be some forgotten ancient language. When hung together, they seemed to acquire a meaning of their own.
+Diane Waldman, Deputy Director, Solomon Guggenheim Museum, New York City 1987
+“The Guggenheim is happy to have acquired your work Hieroglyphics and is proud to have it as part of it's collection...”
+Alexandra Tuttle
+“...Reid's work hints at the underlying unity in the universe. Some of her symbols resemble sacred languages... Yet in a curious alchemy that only art can achieve, Reid manages to transform the banal signs of our civilization's mediocrity into a powerful secret universe.”
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<img src="" alt="Cover Photo">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> LIBERTY  1987
+
+</p>
+    <p class="card__description">
+Libery was a structure made at the request of a group of artists doing a show of monumental works that traveled around France. It was called Liberty partly because of the bright colors and partly because it was celebrating freedom from old ideas and customs.
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<img src="" alt="Cover Photo">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> PLENITUDE  scrolls 2016 - 2023
+
+</p>
+    <p class="card__description">
+Scrolls were an ancient form of art. Mine are different though. In 2016 my husband was very ill and my time was spent caring for him. Maybe for comfort, I began cutting all my previous 20 years of drawings into pieces, probably because cutting them felt strangely therapeutic.
+     Then I glued random pieces onto photographic paper in different configurations. When
+finished, I had four hundred collages, and I began stitching some of them on to scrolls.
+Each scroll has six collages and each is a slightly different size, about  25 cm x 190 cm.
+     Probably the most curious thing about Plenitude is that they're made from years of
+drawings which were almost all done when I was grieving for someone dear who
+had died. Their joyful appearance is rather strange because the drawings originated in such pain.
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<img src="" alt="Cover Photo">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">FEMININE REFLECTIONS 1985
+
+</p>
+    <p class="card__description">
+“FEMININE REFLECTIONS 1985 is about attitudes rather than visual symbols, it asks about stereotyped attitudes towards women, ambiguity, jealousy and weakness.   The piece comes alive by who it reflects, more than an image from it's own being.”
+
+France Delville, Art Critic, (L'Atelier du Futur Revue des Universities du XXI Siecle magazine 1996 2014 translation)
+“The elements in her work become beautiful in the repetition, in the structured accumulation. I'm thinking
+of her Feminine Reflections... that sends shock waves through you, not because of the individual elements
+but because of the whole.”
+    </p>
+  </div>
+</div>
 
 <%= link_to root_path, class: "btn2" do %>
    <button class="cta">
-  <span class="hover-underline-animation"> Biography </span>
+  <span class="hover-underline-animation"> Home </span>
   <svg
     id="arrow-horizontal"
     xmlns="http://www.w3.org/2000/svg"
-    width="30"
-    height="10"
+    width="23"
+    height="7"
     viewBox="0 0 46 16"
   >
     <path
@@ -22,14 +161,15 @@
 </button>
 <% end %>
 
-<%= link_to contact_path, class: "btn2" do %>
+
+<%= link_to biography_path, class: "btn2" do %>
   <button class="cta">
-  <span class="hover-underline-animation"> Contact </span>
+  <span class="hover-underline-animation"> Biography </span>
   <svg
     id="arrow-horizontal"
     xmlns="http://www.w3.org/2000/svg"
-    width="30"
-    height="10"
+    width="23"
+    height="7"
     viewBox="0 0 46 16"
   >
     <path
