--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,7 @@
 
-<h5> "Naturally, it's unusual for a woman artist to have her works collected and/or exhibited by 33 museums in 12 countries. However, what struck her as odd was that in 1987, when Guggenheim curator Lisa Dennison approached her for an installation of her Hieroglyphics, there were 34 male artists collected alongside her, making her the only woman.
+<h5> Art is a spiritual activity because we don't know where it comes from or how it happens or why we see the world differently. Something mysterious happens. I see a clear picture of the piece in my mind and study it for some time before deciding if I should make the structure or Installation or Artist's Book, or not. Art critics call these pictures visions.
+       Almost from the begining my work questioned traditional ideas and accepted truths, especially how we value art and what we do with our work. My insticnctive reaction to the world around me was always a probe rather than an answer. Even as a child I never simply accepted things as truths because someone said I should. Art asks us to look deeper. That's one of it's greatest values that it makes us see and discover the most unusual things.
 
-She grew up in America within a traditional American family but pursued her studies at an experimental university and the Center For Creative Studies in Detroit. She then relocated to Milan, Italy, where she began her painting journey. In 1977, the city of Milan invited her to exhibit her first major installation, Soft Patterns, in a solo show at the museum Palazzo Arengario. Her experiences of living in five countries and speaking four languages served as a wonderful inspiration for her art.
-
-One of the most unusual aspects of her history was her first book, Art Without Rejection, which questioned many practices in the art world and was utilized in over 200 universities.
-
-Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024."
 </h5>
 <%= link_to about_path, class: "btn2" do %>
   <button class="cta">
@@ -13,8 +9,8 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
   <svg
     id="arrow-horizontal"
     xmlns="http://www.w3.org/2000/svg"
-    width="30"
-    height="10"
+    width="23"
+    height="7"
     viewBox="0 0 46 16"
   >
     <path
@@ -26,3 +22,5 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
   </svg>
 </button>
 <% end %>
+
+
