links, photos and descriptions

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,142 @@
 <h1>artwork</h1>
 
 <div class="card">
-<img src="" alt="Cover Photo">
+<%= image_tag "Art Without rejection book.jpg", alt: "book", width: 310 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">ART WITHOUT REJECTION 1993
+
+</p>
+    <p class="card__description">
+Art Without Rejection, used in more than 200 universities and sold in major museums around the world, questions harmful practices in the art world and gives some wise and original alternatives. It has helped and inspired many artists and teachers. Here are two examples.
+
+“I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright...I will continue to savor this book as I would a kilo of Beluga... enough to enrich the day and digest what I have consumed.
+Joan Messner, New York City
+
+“Two months ago Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective...It's a guiding light for artists... My own paintings and practice have been profoundly influenced by Art Without Rejection. I am drinking her words of nourishment and strength...Ezguel Olvera, California
+
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<%= image_tag "Art & Creaky bonesJPG.JPG", alt: "book", width: 310 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">ART & CREAKY BONES  2019
+
+</p>
+    <p class="card__description">
+This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this Art & Creaky Bones it can be found at Amazon with this link.
+
+<%= link_to "https://www.amazon.com/dp/1729874630/ref=cm_sw_em_r_mt_dp_i13rFbKFA9J8X", class: "btn2" do %>
+  <button class="cta">
+    <span class="hover-underline-animation">Buy on Amazon</span>
+    <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="23" height="7" viewBox="0 0 46 16">
+      <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" transform="translate(30)"></path>
+    </svg>
+  </button>
+<% end %>
+
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<%= image_tag "Heaven is Silent.png", alt: "book", width: 270 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">HEAVEN IS SILENT  2024
+
+</p>
+    <p class="card__description">
+Critics say “The best writings about artists are always autobiographical.” In the case of women artists they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life.  It's a much more in-depth testimony of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<%= image_tag "13 Triangles  jpg.jpg", alt: "triangles", width: 350 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> THIRTEEN TRIANGLES   1986 - 1989
+
+</p>
+    <p class="card__description">
+In Sacred Geometry the triangle pointing upward expresses a longing for wisdom and strength. It indicates need and a desire for evolution. When I 'saw' the Thirteen Triangles in my mind, they had an undeciphered message on the interior of each structure. When they were finished, people stood in the center of them and often could feel something mysterious, a little bit like a vibration or a force of energy, something beneficial. The structures are 4,90 meters on each side and made from canvas, acrylic paint, and collage with metal pieces to attach them.
+
+Magali Michel  art critic (translation)
+« The forms in these structures are superbe, rich in color, like a symbol of human balance. They're a harmony between feelings and desire. »
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<%= image_tag "Radiance at night.jpg", alt: "radiance", width: 400 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> RADIANCE 2015 -2016
+
+</p>
+    <p class="card__description">
+Radiance, a permanent solar light Installation, is a private commission comprised of 13 stainless steel structures, each with 18 solar lights. The poles are 20 cm wide x 400 cm tall.
+Solar lights are like personal signs of contemporary life, but somehow infused with mystery because they're so independent. At night each one lights when it is ready,  never all together even though they have collected the same amount of sun during the day. The installation was judged an “oeurve majour” by experts and can be seen on top of the hill facing the town of Vence, France and the matisse Chapel, but in the day time only because the lights have all been turned off.
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<%= image_tag "Soft Patterns at Utah Museum of Fine Art.JPG", alt: "paterns", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -35,7 +170,7 @@
 </div>
 
 <div class="card">
-<img src="" alt="Cover Photo">
+<%= image_tag "Hieroglyphics at Art Gallery of Victoria, Canada.jpg", alt: "hieroglyphics", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -62,7 +197,7 @@ Alexandra Tuttle
 </div>
 
 <div class="card">
-<img src="" alt="Cover Photo">
+<%= image_tag "liberty .jpg", alt: "paterns", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -85,7 +220,41 @@ Libery was a structure made at the request of a group of artists doing a show of
 </div>
 
 <div class="card">
-<img src="" alt="Cover Photo">
+<%= image_tag "Architectural Patterns Grand Palais.jpg", alt: "paterns", width: 300 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> ARCHITECTURAL PATTERNS
+1988 – 1990    (3 structures each 5 meters tall)
+
+
+</p>
+    <p class="card__description">
+Architecture makes us aware of the importance of patterns. They repeat on all
+contemporary buildings. But it's a bit disturbing in a way, because what began as a tribute to contemporary architecture at it's best, seemed to focus on the repetition that's so common.
+
+LETTER
+Lisa (Dennison, Curator, Guggenheim Museum, New York City)
+“I was about to send this letter when I received your absolutely glorious installation shots.
+I am very impressed. You were very sensitive to the space in your work and I think the
+marriage of the two is remarkable...”
+A bientôt,
+Lisa
+    </p>
+  </div>
+</div>
+
+<div class="card">
+<%= image_tag "Plenitude scrolls.jpg", alt: "paterns", width: 400 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -114,7 +283,7 @@ had died. Their joyful appearance is rather strange because the drawings origina
 </div>
 
 <div class="card">
-<img src="" alt="Cover Photo">
+<%= image_tag "Sheila Reid's 'Feminine Reflections'.jpg", alt: "reflections", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -131,7 +300,7 @@ had died. Their joyful appearance is rather strange because the drawings origina
 
 </p>
     <p class="card__description">
-“FEMININE REFLECTIONS 1985 is about attitudes rather than visual symbols, it asks about stereotyped attitudes towards women, ambiguity, jealousy and weakness.   The piece comes alive by who it reflects, more than an image from it's own being.”
+“Feminine reflections is about attitudes rather than visual symbols, it asks about stereotyped attitudes towards women, ambiguity, jealousy and weakness.   The piece comes alive by who it reflects, more than an image from it's own being.”
 
 France Delville, Art Critic, (L'Atelier du Futur Revue des Universities du XXI Siecle magazine 1996 2014 translation)
 “The elements in her work become beautiful in the repetition, in the structured accumulation. I'm thinking
