route change, ul lists

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
        Almost from the begining my work questioned traditional ideas and accepted truths, especially how we value art and what we do with our work. My insticnctive reaction to the world around me was always a probe rather than an answer. Even as a child I never simply accepted things as truths because someone said I should. Art asks us to look deeper. That's one of it's greatest values that it makes us see and discover the most unusual things.
 
 </h5>
-<%= link_to about_path, class: "btn2" do %>
+<%= link_to artwork_path, class: "btn2" do %>
   <button class="cta">
   <span class="hover-underline-animation"> Artwork </span>
   <svg
@@ -22,5 +22,3 @@
   </svg>
 </button>
 <% end %>
-
-
