fonts, cards, style edits

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <style>
+      h1 {
+        text-align: center;
+        margin-top: 50px;
+         color: #803030;
+         font-family: "Shadows Into Light", static;
+        font-size: 50px;
+      }
+    </style>
   </head>
 
   <body>
