--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -10,6 +10,7 @@
   font-size: 12px;
   padding-right: 15px;
   text-transform: uppercase;
+  font-family: "Shadows Into Light", static;
 }
 
 .cta svg {
