--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,7 +1,7 @@
 .card {
   position: relative;
   width: 300px;
-  height: 280px;
+  height: 300px;
   background: white;
   border-radius: 10px;
   display: flex;
@@ -49,8 +49,8 @@
 
 .card__description {
   margin: 10px 0 0;
-  font-size: 11px;
-  color: #777;
+  font-size: 9.5px;
+  color: #5f5e5e;
   line-height: 1.4;
 }
 
