--- a/app/views/pages/artwork.html.erb
+++ b/app/views/pages/artwork.html.erb
@@ -1,5 +1,7 @@
-<h1>artwork</h1>
 
+<div class="container">
+<div class="row">
+    <div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Art Without rejection book.jpg", alt: "book", width: 310 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -24,11 +26,15 @@ Art Without Rejection, used in more than 200 universities and sold in major muse
 Joan Messner, New York City
 
 “Two months ago Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective...It's a guiding light for artists... My own paintings and practice have been profoundly influenced by Art Without Rejection. I am drinking her words of nourishment and strength...Ezguel Olvera, California
-
     </p>
   </div>
 </div>
+</div>
 
+
+
+
+    <div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Art & Creaky bonesJPG.JPG", alt: "book", width: 310 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -57,11 +63,12 @@ This book won 6 literary awards in the categories, Art, Aging and Inspiration. I
     </svg>
   </button>
 <% end %>
-
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Heaven is Silent.png", alt: "book", width: 270 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -84,7 +91,9 @@ Critics say “The best writings about artists are always autobiographical.” I
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "13 Triangles  jpg.jpg", alt: "triangles", width: 350 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -110,7 +119,9 @@ Magali Michel  art critic (translation)
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Radiance at night.jpg", alt: "radiance", width: 400 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -134,7 +145,9 @@ Solar lights are like personal signs of contemporary life, but somehow infused w
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Soft Patterns at Utah Museum of Fine Art.JPG", alt: "paterns", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -168,7 +181,9 @@ Solar lights are like personal signs of contemporary life, but somehow infused w
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Hieroglyphics at Art Gallery of Victoria, Canada.jpg", alt: "hieroglyphics", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -195,7 +210,9 @@ Alexandra Tuttle
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "liberty .jpg", alt: "paterns", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -218,7 +235,9 @@ Libery was a structure made at the request of a group of artists doing a show of
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Architectural Patterns Grand Palais.jpg", alt: "paterns", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -252,7 +271,9 @@ Lisa
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Plenitude scrolls.jpg", alt: "paterns", width: 400 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -281,7 +302,9 @@ had died. Their joyful appearance is rather strange because the drawings origina
     </p>
   </div>
 </div>
+</div>
 
+<div class="col-md-4 mb-5">
 <div class="card">
 <%= image_tag "Sheila Reid's 'Feminine Reflections'.jpg", alt: "reflections", width: 300 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -309,6 +332,11 @@ but because of the whole.”
     </p>
   </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+
 
 <%= link_to root_path, class: "btn2" do %>
    <button class="cta">
