--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,3 +6,11 @@
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   font-family: "Shadows Into Light", static;
 }
+
+
+
+h5 {
+  font-size: 1.5em;
+  color: #0c0c0c;
+  margin: 0;
+}
