--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,17 @@
         margin-top: 50px;
          color: #803030;
          font-family: "Shadows Into Light", static;
-        font-size: 50px;
+        font-size: 60px;
+         font-weight: 700;
+      }
+
+      h2 {
+        text-align: center;
+        margin-top: 50px;
+         color: #803030;
+         font-family: "Shadows Into Light", static;
+        font-size: 40px;
+         font-weight: 700;
       }
     </style>
   </head>
