--- a/app/views/pages/biography.html.erb
+++ b/app/views/pages/biography.html.erb
@@ -1,16 +1,15 @@
-<h1>BIOGRAPHY</h1>
+<h2>BIOGRAPHY</h2>
 <div class= "biography">
-<p>
 "Naturally, it's unusual for a woman artist to have her works collected and/or exhibited by 33 museums in 12 countries. However, what struck her as odd was that in 1987, when Guggenheim curator Lisa Dennison approached her for an installation of her Hieroglyphics, there were 34 male artists collected alongside her, making her the only woman.
 
 She grew up in America within a traditional American family but pursued her studies at an experimental university and the Center For Creative Studies in Detroit. She then relocated to Milan, Italy, where she began her painting journey. In 1977, the city of Milan invited her to exhibit her first major installation, Soft Patterns, in a solo show at the museum Palazzo Arengario. Her experiences of living in five countries and speaking four languages served as a wonderful inspiration for her art.
 
 One of the most unusual aspects of her history was her first book, Art Without Rejection, which questioned many practices in the art world and was utilized in over 200 universities.
 
-Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024." </p>
+Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024."
 </div>
 
-<h1>EXHIBITIONS</h1>
+<h2>EXHIBITIONS</h2>
 
 <ul>
 <li>Palazzo Arengario, Milan, Italy 1977</li>
@@ -43,7 +42,7 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
 
 
 
-<h1>MUSEUM COLLECTIONS</h1>
+<h2>MUSEUM COLLECTIONS</h2>
 
 <ul>
 <li>Solomon Guggenheim Museum, New York City 1987</li>
