some colours, and changes

--- a/app/assets/stylesheets/biography.scss
+++ b/app/assets/stylesheets/biography.scss
@@ -1,8 +1,23 @@
 .biography {
-  background-color: white;
+  background-color: #fcf4e3;
   padding: 20px;
   border-radius: 5px;
   margin-bottom: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  font-family: "Shadows Into Light", static;
+  font-family: "Comic Neue", cursive;
+
+
+}
+
+.ul1  {
+  font-family: "Comic Neue", cursive;
+}
+.ul2  {
+  font-family: "Comic Neue", cursive;
+}
+h6 {
+  text-align: center;
+  color: #432818;
+  margin: 0;
+  font-family: "Comic Neue", cursive;
 }
