--- a/app/views/pages/biography.html.erb
+++ b/app/views/pages/biography.html.erb
@@ -9,8 +9,10 @@ One of the most unusual aspects of her history was her first book, Art Without R
 Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024."
 </div>
 
-<h2>EXHIBITIONS</h2>
+<h6>contact: Sheila8383@aol.com</h6>
 
+<h2>EXHIBITIONS</h2>
+<div class= "ul1">
 <ul>
 <li>Palazzo Arengario, Milan, Italy 1977</li>
   <li>Utah Museum of Fine Art, Salt Lake City 1987</li>
@@ -38,12 +40,12 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
   <li>Kyoto Institute Museum Kyoto, Japan 2007</li>
   <li>Museum of Artist Books, Baku, Azerbaijan 2009</li>
 </ul>
-
+</div>
 
 
 
 <h2>MUSEUM COLLECTIONS</h2>
-
+<div class= "ul2">
 <ul>
 <li>Solomon Guggenheim Museum, New York City 1987</li>
   <li>The Victoria & Albert Museum Library, London UK 2007</li>
@@ -71,6 +73,7 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
   <li>Jacksonville University Museum, Florida 1990</li>
   <li>McAllen International Museum, Texas 1990</li>
 </ul>
+</div>
 
 <%= link_to artwork_path, class: "btn2" do %>
   <button class="cta">
