--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,13 +4,14 @@
   border-radius: 5px;
   margin-bottom: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  font-family: "Shadows Into Light", static;
+  font-family: "Comic Neue", cursive;
+  background-color: #fcf2d9e1 ;
 }
 
 
 
 h5 {
-  font-size: 1.5em;
-  color: #0c0c0c;
+  font-size: 2.0em;
+  color: #432818;
   margin: 0;
 }
